<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorMaroon"
            app:titleTextColor="@color/colorWhite"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:id="@+id/tvAdminPanel"
            android:layout_width="wrap_content"
            android:layout_below="@id/my_toolbar"
            android:layout_height="wrap_content"
            android:text="@string/adminPanel"
            android:textSize="50dp"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnSearchClicked"
                android:text="@string/searchPlace" />

            <Button
                android:id="@+id/btnEditPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSearch"
                android:onClick="btnEditPlaceInformationClicked"
                android:text="@string/editPlaceInfo" />

            <Button
                android:id="@+id/btnEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnEditPlace"
                android:onClick="btnEditProfileClicked"
                android:text="@string/editProfile" />

            <Button
                android:id="@+id/btnAddPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnEditProfile"
                android:onClick="btnAddPlaceClicked"
                android:text="@string/addPlace" />

        </RelativeLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>